# media-outlet-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  deploy-pipeline.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  suggest_improvements.md
.github/instructions/: coding-style.instructions.md  conventional-commits.instructions.md  follow-up-questions.instructions.md  testing.instructions.md
.github/workflows/: ci.yml
infra/: api_gateway.tf  dynamodb.tf  ecr.tf  eventbridge.tf  frontend.tf  lambda.tf  main.tf  outputs.tf  roles.tf  s3.tf  variables.tf
scripts/: README.md  deploy-api.sh  deploy-dashboard.sh  deploy-enrich.sh  deploy-extract.sh  deploy-load.sh  deploy-pipeline.sh  run-dashboard.sh  test-all.sh  test-local-api.sh  test-local-enrich.sh  test-local-extract.sh
services/api/: Dockerfile  deploy.sh  main.py  pyproject.toml  test_main.py
services/dashboard/: Dockerfile  README.md  main.py  pyproject.toml  test_main.py
services/pipeline/: README.md  extract.py  logger.py  pyproject.toml  transform.py
services/pipeline/enrich/: Dockerfile  README.md  conftest.py  deploy.sh  main.py  pyproject.toml  test_local.sh  test_main.py
services/pipeline/extract/: README.md  deploy.sh  main.py  pyproject.toml  test_local.sh  test_main.py
services/pipeline/extract/tests/: conftest.py  test_main.py
services/pipeline/load/: Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  test_main.py
services/pipeline/tests/: test_extract.py  test_main.py  test_transform.py
services/pipeline/transform/: main.py  pyproject.toml
services/pipeline/transform/tests/: test_main.py
