[project]
name = "api"
version = "0.1.0"
description = "Simple API to fetch articles from DynamoDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.11",
    "fastapi[standard]>=0.136.1",
    "mangum>=0.19.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]
