[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.1.0",
    "boto3>=1.43.12",
    "pandas>=3.0.3",
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.13",
    "streamlit>=1.57.0",
]
