[project]
name = "load"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
